@@ -11,7 +11,13 @@ import io.enmasse.systemtest.Environment;
 import io.enmasse.systemtest.selenium.resources.WebItem;
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.extension.ExtensionContext;
-import org.openqa.selenium.*;
+import org.openqa.selenium.By;
+import org.openqa.selenium.JavascriptExecutor;
+import org.openqa.selenium.Keys;
+import org.openqa.selenium.OutputType;
+import org.openqa.selenium.TakesScreenshot;
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
 import org.openqa.selenium.logging.LogEntries;
 import org.openqa.selenium.logging.LogEntry;
 import org.openqa.selenium.logging.LogType;
@@ -40,7 +46,17 @@ public class SeleniumProvider {
     private WebDriverWait driverWait;
     private Map<Date, File> browserScreenshots = new HashMap<>();
     private String webconsoleFolder = "selenium_tests";
+    private static SeleniumProvider instance;
 
+    private SeleniumProvider() {
+    }
+
+    public static synchronized SeleniumProvider getInstance() {
+        if (instance == null) {
+            instance = new SeleniumProvider();
+        }
+        return instance;
+    }
 
     public void onFailed(ExtensionContext extensionContext) {
         String getTestClassName = extensionContext.getTestClass().get().getName();
@@ -233,7 +249,7 @@ public class SeleniumProvider {
                     }
                     log.warn("Element was found, but it is not enabled, go to next iteration: {}", i);
                 } else if (result instanceof List) {
-                    if (((List) result).size() == count) {
+                    if (((List<?>) result).size() == count) {
                         break;
                     }
                     log.warn("Elements were not found, go to next iteration: {}", i);
@@ -328,7 +344,7 @@ public class SeleniumProvider {
 
     public boolean getCheckboxValue(WebElement element) {
         if (isCheckbox(element)) {
-            return new Boolean(element.getAttribute("checked"));
+            return Boolean.valueOf(element.getAttribute("checked"));
         }
         throw new IllegalStateException("Requested element is not of type 'checkbox'");
     }
